k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-manager
  labels:
    app.kubernetes.io/name: dns-manager
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dns-manager
  ports:
    - name: http
      port: 80
      targetPort: http
